# GraphicsToolkit

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  GtkPlayground.cpp  gtk_playground.cpp
ext/: CMakeLists.txt
include/GraphicsToolkit/: gtk.h
include/GraphicsToolkit/Core/: IntegerSequence.h  Tuple.h  Typelist.h
include/GraphicsToolkit/Math/: Dimension.h  Discrepancy.h  GtkMath.h  Matrix.h  Sample.h  Tensor.h  TensorDefinition.h  TensorOperations.h  Vector.h
include/GraphicsToolkit/core/: GenericListTraits.h  IntegerSequence.h  Tuple.h  Typelist.h  ref_ptr.h
include/GraphicsToolkit/math/: Dimension.h  Tensor.h  dimension.h  gtk_math.h  gtk_utils.h  tensor.h  tensor_operations.h  transform.h  utils.h  vec.h
include/GraphicsToolkit/math/impl/: mat_op.h  mat_temp.h  shape_traits.h  vec_op.h  vec_temp.h
include/GraphicsToolkit/math/linarg/: mat.h  vec.h
include/GraphicsToolkit/math/linarg/impl/: mat_temp.h  vec_op.h  vec_temp.h
include/GraphicsToolkit/random/: discrepancy.h  sample.h
include/GraphicsToolkit/scene/: mesh.h  model.h  obj.h  scene.h
src/: CMakeLists.txt
src/Gui/: CMakeLists.txt  ImGuiApp.cpp  ImGuiAppDX11.cpp  ImGuiAppDX12.cpp
src/Math/: CMakeLists.txt  Sample.cpp
src/core/: CMakeLists.txt
src/gui/: CMakeLists.txt  gui_test.cpp
src/math/: CMakeLists.txt  Discrepancy.cpp  GtkMath.cpp  Sample.cpp  coordinates.h  gtk_math.cpp  gtk_utils.cpp  mat.h  mat_op.h  mat_temp.h  math.cpp  shape_traits.h  transform.cpp  utils.cpp  utils.h  vec.h
src/random/: CMakeLists.txt  discrepancy.cpp  sample.cpp
src/scene/: CMakeLists.txt  mesh.cpp  obj.cpp
test/: CMakeLists.txt
test/Core/: IntegerSequenceTest.cpp  StaticTypelistTupleTest.cpp  TupleTest.cpp  typelist_tuple_test.cpp
test/Math/: DimensionTest.cpp  TensorTest.cpp  VectorTest.cpp  random_test.cpp
test/common/: test_utils.h
test/core/: ref_test.cpp  typelist_tuple_test.cpp
test/mat/: mat_vec_test.cpp
test/math/: mat_vec_test.cpp  tensor_test.cpp  transform_test.cpp
test/random/: random_test.cpp
test/scene/: scene_test.cpp
